# python-plot-template

./: .gitignore  Makefile  README.md  example_plot.py  plot_template.py  pyproject.toml
.github/workflows/: ci.yml
examples/: heatmap_corr.py  line_and_scatter.py  muted_bar_chart.py  scatter_regression.py  stacked_area.py
python_plot_template/: __init__.py  styles.py  utils.py
tests/: test_styles.py  test_utils.py
