[project]
name = "python-plot-template"
version = "0.1.0"
description = "Minimal Matplotlib style template with Paul Tol color palettes."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Julian Streitberger" }]
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["ruff>=0.7"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["python_plot_template"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["python_plot_template"]
