[project]
name = "python-plot-template"
version = "0.1.0"
description = "Minimal Matplotlib style template with Paul Tol color palettes."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Julian Streitberger" }]
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
]
keywords = ["matplotlib", "plotting", "style", "theme", "visualization", "color palettes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/jstreitberger03/python-plot-template"
Repository = "https://github.com/jstreitberger03/python-plot-template"
Issues = "https://github.com/jstreitberger03/python-plot-template/issues"
Documentation = "https://github.com/jstreitberger03/python-plot-template#readme"

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["python_plot_template"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["python_plot_template"]
